--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,12 @@ header {
   display: flex;
   justify-content: space-between;
   /* align-items: center; */
-  background-color: #006464;
+  background-color: #007474;
   height: 70px;
+}
+
+.icon {
+  margin-right: 7px;
 }
 
 header * {
@@ -38,9 +42,9 @@ header h1 {
 }
 
 header ul {
+  position: relative;
   display: flex;
   justify-content: flex-end;
-  gap: 20px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -50,4 +54,76 @@ header ul li a {
   display: block;
   font-size: 1.2rem;
   padding: 20px;
+}
+
+header ul li a:hover {
+  background-color: #006669;
+  transition: 0.5s;
+  color: #fff;
+}
+
+header ul li ul {
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  width: 190px;
+  background: #fff;
+  right: 0;
+  top: 69.5px;
+  z-index: 10000;
+}
+
+header ul li:hover ul {
+  display: flex;
+}
+
+header ul li ul li a {
+  padding: 10px;
+}
+
+header ul li ul li a {
+  color: #006669;
+  /* background-color: #fff; */
+}
+
+.carousel {
+  height: 300px;
+}
+
+.slider-title {
+  text-align: center;
+  padding: 20px 0;
+}
+
+.carousel-item {
+  border-radius: 10px;
+  height: inherit;
+}
+
+.carousel-inner,
+.carousel-item {
+  border-radius: 4px;
+}
+
+.carousel-caption {
+  right: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px 0;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.slider-img {
+  object-fit: cover;
+}
+
+.slide-label {
+  font-size: 2rem;
+  margin: 0;
+}
+.slide-label a {
+  height: 100%;
+  margin: 0;
+  color: #fff;
+  opacity: 0.7;
 }
