--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@ a {
   color: inherit;
 }
 
+.title {
+  padding: 20px 0;
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -90,11 +94,6 @@ header ul li ul li a {
   height: 300px;
 }
 
-.slider-title {
-  text-align: center;
-  padding: 20px 0;
-}
-
 .carousel-item {
   border-radius: 10px;
   height: inherit;
@@ -113,6 +112,10 @@ header ul li ul li a {
   background-color: rgba(0, 0, 0, 0.6);
 }
 
+.slider-title {
+  text-align: center;
+}
+
 .slider-img {
   object-fit: cover;
 }
@@ -126,4 +129,75 @@ header ul li ul li a {
   margin: 0;
   color: #fff;
   opacity: 0.7;
+}
+
+.content-title {
+  margin-left: 10px;
+}
+
+.post {
+  margin-bottom: 30px;
+}
+
+.post_text {
+  background-color: #fff;
+  padding: 8px;
+  border-radius: 4px;
+}
+
+.post-title {
+  padding: 15px 0;
+}
+
+.post-title__link:hover {
+  text-decoration: underline;
+}
+
+.icons {
+  display: flex;
+  gap: 15px;
+  margin-bottom: 20px;
+}
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.search,
+.topics {
+  padding: 20px;
+  background-color: #fff;
+}
+
+.search__input {
+  padding: 10px 12px;
+  display: block;
+  border-radius: 4px;
+  width: 100%;
+  border: 1px solid #ececec;
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.topics-list {
+  padding: 0;
+  margin: 0;
+}
+
+.topics-item {
+  padding: 8px 0;
+  list-style-type: none;
+  border-bottom: 1px solid #ececec;
+  cursor: pointer;
+}
+
+.topics-item__link {
+  display: block;
+  transition: padding 0.3s;
+}
+
+.topics-item__link:hover {
+  padding-left: 10px;
 }
