--- a/css/style.css
+++ b/css/style.css
@@ -187,17 +187,94 @@ header ul li ul li a {
 }
 
 .topics-item {
-  padding: 8px 0;
   list-style-type: none;
   border-bottom: 1px solid #ececec;
   cursor: pointer;
 }
 
 .topics-item__link {
+  padding: 8px 0;
   display: block;
   transition: padding 0.3s;
 }
 
 .topics-item__link:hover {
   padding-left: 10px;
+}
+
+.footer {
+  position: relative;
+  background-color: #303036;
+  color: #d3d3d3;
+}
+
+.footer-section {
+  padding: 22px;
+}
+
+.footer-title {
+  margin-bottom: 20px;
+  color: #fff;
+}
+
+.contacts-item {
+  display: block;
+  font-size: 1em;
+  margin-bottom: 8px;
+}
+
+.socials {
+  display: flex;
+  gap: 10px;
+}
+.socials-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid gray;
+  padding-top: 2px;
+  border-radius: 5px;
+  width: 40px;
+  height: 40px;
+  font-size: 1.3em;
+  color: #fff;
+  transition: border 0.3s;
+}
+
+.socials-item:hover {
+  border-color: #fff;
+}
+
+.links-list {
+  margin: 0;
+  padding: 0;
+}
+
+.links-item__link {
+  display: block;
+  padding: 8px;
+  transition: padding 0.3s;
+}
+
+.links-item__link:hover {
+  padding-left: 20px;
+}
+
+.contact-input {
+  background-color: #272727;
+  color: #bebdbd;
+  padding: 8px;
+  margin-bottom: 10px;
+  line-height: 1.5rem;
+  border: none;
+  border-radius: 4px;
+  width: 100%;
+}
+
+.contact-btn {
+  color: #fff;
+}
+
+.contact-btn:hover {
+  border: 1px solid #bebdbd;
 }
