--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,13 @@ h6 {
 
 body {
   background-color: #f6f6f6;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  min-height: 100vh;
+}
+.content {
+  flex: 1 0 auto;
 }
 
 a {
@@ -277,4 +284,28 @@ header ul li ul li a {
 
 .contact-btn:hover {
   border: 1px solid #bebdbd;
+}
+
+.form-title {
+  text-align: center;
+}
+
+.form-link {
+  font-size: 1.2em;
+  color: #5c5b5b;
+  transition: padding 0.3s;
+}
+
+.form-btns {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.form-link:hover {
+  padding-right: 10px;
+}
+
+.form-control {
+  height: 3.3rem;
 }
