--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -113,14 +113,24 @@ header ul li a:hover {
 
 /* content */
 
+.post,
+.topic,
+.user,
+.table-title {
+  border-bottom: 1px solid #d3d3d3;
+}
+
 .buttons {
   display: flex;
   gap: 30px;
   margin: 20px 0;
 }
 
-.posts-title {
-  margin-bottom: 20px;
+.posts-title,
+.topics-title,
+.users-title {
+  text-align: center;
+  padding: 20px 0;
 }
 
 .table-title {
@@ -128,7 +138,9 @@ header ul li a:hover {
 }
 
 .table-title__item,
-.post__item {
+.post__item,
+.topic__item,
+.user__item {
   padding: 10px;
 }
 
@@ -137,6 +149,22 @@ header ul li a:hover {
 .delete {
   text-align: center;
   font-weight: 700;
+}
+
+.create-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.create-form__submit {
+  width: 10rem;
+}
+
+.ck-content {
+  height: 200px;
 }
 
 /* FOOTER */
@@ -238,9 +266,9 @@ header ul li a:hover {
   padding-right: 10px;
 }
 
-.form-control {
+/* .form-control {
   height: 3.3rem;
-}
+} */
 
 .col-red {
   color: #e00000;
