--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -19,7 +19,10 @@ body {
   /* justify-content: space-between; */
   min-height: 100vh;
 }
-
+.d-flex {
+  display: flex;
+  gap: 5px;
+}
 .content {
   flex: 1 0 auto;
   min-height: 90vh;
@@ -149,6 +152,7 @@ header ul li a:hover {
 }
 
 .id,
+.author,
 .edit,
 .delete {
   text-align: center;
