--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,6 +209,10 @@ header ul li ul li a {
   padding-left: 10px;
 }
 
+.single-post {
+  margin-bottom: 30px;
+}
+
 .footer {
   position: relative;
   background-color: #303036;
